--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "next": "14.2.5",
+    "autoprefixer": "^10.4.20",
+    "next": "^14.2.14",
+    "postcss": "^8.4.47",
     "react": "^18",
     "react-dom": "^18",
-    "reactstrap": "^9.2.2"
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@types/node": "^20",
