--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/card": "^2.0.34",
     "@nextui-org/navbar": "^2.0.37",
     "autoprefixer": "^10.4.20",
     "next": "^14.2.14",
